--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -1,13 +1,20 @@
 env:
   browser: true
-  es2021: true
   node: true
-extends: airbnb-base
-overrides: []
+  es2021: true
+
+extends:
+  - airbnb-base
+
 parserOptions:
   ecmaVersion: latest
   sourceType: module
-rules: {
-  no-underscore-dangle: [2, { "allow": ["__filename", "__dirname"] }],
-  no-console: 0,
-}
+
+rules:
+  no-console: 0
+  import/extensions: # FIXME: remove when rule will be adjusted for new nodejs version
+    - error
+    - ignorePackages
+    - js: always
+  no-underscore-dangle: [2, { "allow": ["__filename", "__dirname"] }]
+  no-param-reassign: 0
