--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "autoprefixer": "^10.4.13",
     "bootstrap": "^5.2.2",
     "bootstrap-loader": "^4.0.0",
+    "i18next": "^22.0.6",
     "lodash": "^4.17.21",
     "on-change": "^4.0.1",
     "postcss-cli": "^10.0.0",
