--- a/package.json
+++ b/package.json
@@ -39,7 +39,6 @@
     "html-webpack-plugin": "^5.5.0",
     "imports-loader": "^4.0.1",
     "mini-css-extract-plugin": "^2.7.2",
-    "prettier": "^2.7.1",
     "style-loader": "^3.3.1",
     "url-loader": "^4.1.1",
     "webpack": "^5.74.0",
@@ -48,12 +47,13 @@
     "workbox-webpack-plugin": "^6.5.4"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.6",
     "autoprefixer": "^10.4.13",
+    "axios": "^1.2.1",
     "bootstrap": "^5.2.2",
     "i18next": "^22.0.6",
     "lodash": "^4.17.21",
     "on-change": "^4.0.1",
-    "postcss-cli": "^10.0.0",
     "yup": "^0.32.11"
   }
 }
